--- a/index.html
+++ b/index.html
@@ -332,15 +332,15 @@
                         <img src="https://www.atoslifesciences.com/images/ROZUTOS%20GOLD%20-10.jpg" style="height:250px;width:400px;" alt="Natural">
                         <img src="https://www.atoslifesciences.com/images/TELMITOS-AM.jpg" style="height:250px;width:400px;" alt="Natural">
                         <img src="https://www.atoslifesciences.com/images/ROZUTOS%20GOLD%20-10.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="https://www.atoslifesciences.com/images/ROZUTOS%20GOLD%20-10.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/GLIMITOS-M2 FORTE.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/GLIMITOS-M3.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/GLIMITOS-MV1.3.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/RABITOS-D.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/ROZUTOS GOLD -10.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/TELMITOS-20.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/TELMITOS-AM.jpg" style="height:250px;width:400px;" alt="Natural">
-                        <img src="images/TELMITOS-TRIO.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/RABITOS-D.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/CETABLOC-5.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/TELMITOS-20.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/TELMITOS-AM.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/ATOS%20NERVE-D.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/GLIMITOS-M1.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/GLIMITOS-M2%20FORTE.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/CETABLOC-5.jpg" style="height:250px;width:400px;" alt="Natural">
+                        <img src="https://www.atoslifesciences.com/images/GLIMITOS-M3.jpg" style="height:250px;width:400px;" alt="Natural">
                     </marquee>
                 </section></div>
             </div>
