--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
         
         <div class="section" id="slideshow">
-            <h2>Photo Gallery</h2>
+            <h2>Annual Highlights</h2>
             <div class="slideshow-container">
 
                 <div class="slides" style="display: none;">
@@ -412,10 +412,10 @@
                 <!-- <a href="https://github.com/surakanti-bhaskar-reddy" target="_blank" class="social-icon github">
                     <i class="fab fa-github"></i> GitHub
                 </a> -->
-                <a href="https://www.facebook.com/your-profile" target="_blank" class="social-icon facebook">
+                <a href="https://www.facebook.com/bhaskerreddys" target="_blank" class="social-icon facebook">
                     <i class="fab fa-facebook-f"></i> Facebook
                 </a>
-                <a href="https://www.instagram.com/your-profile" target="_blank" class="social-icon instagram">
+                <a href="https://www.instagram.com/bhaskerreddysurukanti/" target="_blank" class="social-icon instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
             </div>
